OurGP/GPInterpreter/GramParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Gram.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class GramParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WS=1, LPAREN=2, RPAREN=3, LBRACE=4, RBRACE=5, ADD=6, SUB=7, MUL=8, DIV=9, 
		MOD=10, ASS=11, EQ=12, NEQ=13, LE=14, LEQ=15, GE=16, GEQ=17, AND=18, OR=19, 
		NOT=20, TRUE=21, FALSE=22, IF=23, WHILE=24, PRINT=25, SCAN=26, NUMBER=27, 
		NUM_VAR=28, BOOL_VAR=29;
	public const int
		RULE_program = 0, RULE_expressions = 1, RULE_if_statement = 2, RULE_while_loop = 3, 
		RULE_print_call = 4, RULE_scan_call = 5, RULE_assignment = 6, RULE_comparisson_type = 7, 
		RULE_logic_operator = 8, RULE_aritmetic_operator_strong = 9, RULE_aritmetic_operator_weak = 10, 
		RULE_bool_value = 11, RULE_numeric_value = 12;
	public static readonly string[] ruleNames = {
		"program", "expressions", "if_statement", "while_loop", "print_call", 
		"scan_call", "assignment", "comparisson_type", "logic_operator", "aritmetic_operator_strong", 
		"aritmetic_operator_weak", "bool_value", "numeric_value"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'('", "')'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'='", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", 
		"'True'", "'False'", "'if'", "'while'", "'print'", "'scan'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "ADD", "SUB", "MUL", 
		"DIV", "MOD", "ASS", "EQ", "NEQ", "LE", "LEQ", "GE", "GEQ", "AND", "OR", 
		"NOT", "TRUE", "FALSE", "IF", "WHILE", "PRINT", "SCAN", "NUMBER", "NUM_VAR", 
		"BOOL_VAR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Gram.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GramParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GramParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GramParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionsContext expressions() {
			return GetRuleContext<ExpressionsContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 26;
			expressions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public If_statementContext if_statement() {
			return GetRuleContext<If_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public While_loopContext while_loop() {
			return GetRuleContext<While_loopContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Print_callContext print_call() {
			return GetRuleContext<Print_callContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Scan_callContext scan_call() {
			return GetRuleContext<Scan_callContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionsContext expressions() {
			return GetRuleContext<ExpressionsContext>(0);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressions; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionsContext expressions() {
		ExpressionsContext _localctx = new ExpressionsContext(Context, State);
		EnterRule(_localctx, 2, RULE_expressions);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IF:
				{
				State = 28;
				if_statement();
				}
				break;
			case WHILE:
				{
				State = 29;
				while_loop();
				}
				break;
			case PRINT:
				{
				State = 30;
				print_call();
				}
				break;
			case SCAN:
				{
				State = 31;
				scan_call();
				}
				break;
			case NUM_VAR:
			case BOOL_VAR:
				{
				State = 32;
				assignment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 36;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 931135488L) != 0)) {
				{
				State = 35;
				expressions();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_statementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF() { return GetToken(GramParser.IF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GramParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Bool_valueContext bool_value() {
			return GetRuleContext<Bool_valueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GramParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(GramParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionsContext expressions() {
			return GetRuleContext<ExpressionsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(GramParser.RBRACE, 0); }
		public If_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_statementContext if_statement() {
		If_statementContext _localctx = new If_statementContext(Context, State);
		EnterRule(_localctx, 4, RULE_if_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			Match(IF);
			State = 39;
			Match(LPAREN);
			State = 40;
			bool_value(0);
			State = 41;
			Match(RPAREN);
			State = 42;
			Match(LBRACE);
			State = 43;
			expressions();
			State = 44;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class While_loopContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHILE() { return GetToken(GramParser.WHILE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GramParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Bool_valueContext bool_value() {
			return GetRuleContext<Bool_valueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GramParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(GramParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionsContext expressions() {
			return GetRuleContext<ExpressionsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(GramParser.RBRACE, 0); }
		public While_loopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_while_loop; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhile_loop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public While_loopContext while_loop() {
		While_loopContext _localctx = new While_loopContext(Context, State);
		EnterRule(_localctx, 6, RULE_while_loop);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 46;
			Match(WHILE);
			State = 47;
			Match(LPAREN);
			State = 48;
			bool_value(0);
			State = 49;
			Match(RPAREN);
			State = 50;
			Match(LBRACE);
			State = 51;
			expressions();
			State = 52;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Print_callContext : ParserRuleContext {
		public Print_callContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_print_call; } }
	 
		public Print_callContext() { }
		public virtual void CopyFrom(Print_callContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PrintNumContext : Print_callContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRINT() { return GetToken(GramParser.PRINT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GramParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Numeric_valueContext numeric_value() {
			return GetRuleContext<Numeric_valueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GramParser.RPAREN, 0); }
		public PrintNumContext(Print_callContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrintNum(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PrintBoolContext : Print_callContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRINT() { return GetToken(GramParser.PRINT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GramParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Bool_valueContext bool_value() {
			return GetRuleContext<Bool_valueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GramParser.RPAREN, 0); }
		public PrintBoolContext(Print_callContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrintBool(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Print_callContext print_call() {
		Print_callContext _localctx = new Print_callContext(Context, State);
		EnterRule(_localctx, 8, RULE_print_call);
		try {
			State = 64;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				_localctx = new PrintNumContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 54;
				Match(PRINT);
				State = 55;
				Match(LPAREN);
				State = 56;
				numeric_value(0);
				State = 57;
				Match(RPAREN);
				}
				break;
			case 2:
				_localctx = new PrintBoolContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 59;
				Match(PRINT);
				State = 60;
				Match(LPAREN);
				State = 61;
				bool_value(0);
				State = 62;
				Match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Scan_callContext : ParserRuleContext {
		public Scan_callContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scan_call; } }
	 
		public Scan_callContext() { }
		public virtual void CopyFrom(Scan_callContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ScanBoolContext : Scan_callContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SCAN() { return GetToken(GramParser.SCAN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GramParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL_VAR() { return GetToken(GramParser.BOOL_VAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GramParser.RPAREN, 0); }
		public ScanBoolContext(Scan_callContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScanBool(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ScanNumContext : Scan_callContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SCAN() { return GetToken(GramParser.SCAN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GramParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUM_VAR() { return GetToken(GramParser.NUM_VAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GramParser.RPAREN, 0); }
		public ScanNumContext(Scan_callContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScanNum(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Scan_callContext scan_call() {
		Scan_callContext _localctx = new Scan_callContext(Context, State);
		EnterRule(_localctx, 10, RULE_scan_call);
		try {
			State = 74;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				_localctx = new ScanNumContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 66;
				Match(SCAN);
				State = 67;
				Match(LPAREN);
				State = 68;
				Match(NUM_VAR);
				State = 69;
				Match(RPAREN);
				}
				break;
			case 2:
				_localctx = new ScanBoolContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 70;
				Match(SCAN);
				State = 71;
				Match(LPAREN);
				State = 72;
				Match(BOOL_VAR);
				State = 73;
				Match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
	 
		public AssignmentContext() { }
		public virtual void CopyFrom(AssignmentContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AssignBoolContext : AssignmentContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL_VAR() { return GetToken(GramParser.BOOL_VAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASS() { return GetToken(GramParser.ASS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Bool_valueContext bool_value() {
			return GetRuleContext<Bool_valueContext>(0);
		}
		public AssignBoolContext(AssignmentContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignBool(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignNumContext : AssignmentContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUM_VAR() { return GetToken(GramParser.NUM_VAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASS() { return GetToken(GramParser.ASS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Numeric_valueContext numeric_value() {
			return GetRuleContext<Numeric_valueContext>(0);
		}
		public AssignNumContext(AssignmentContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignNum(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 12, RULE_assignment);
		try {
			State = 82;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUM_VAR:
				_localctx = new AssignNumContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 76;
				Match(NUM_VAR);
				State = 77;
				Match(ASS);
				State = 78;
				numeric_value(0);
				}
				break;
			case BOOL_VAR:
				_localctx = new AssignBoolContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 79;
				Match(BOOL_VAR);
				State = 80;
				Match(ASS);
				State = 81;
				bool_value(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Comparisson_typeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(GramParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEQ() { return GetToken(GramParser.NEQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LE() { return GetToken(GramParser.LE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEQ() { return GetToken(GramParser.LEQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GE() { return GetToken(GramParser.GE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GEQ() { return GetToken(GramParser.GEQ, 0); }
		public Comparisson_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comparisson_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComparisson_type(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Comparisson_typeContext comparisson_type() {
		Comparisson_typeContext _localctx = new Comparisson_typeContext(Context, State);
		EnterRule(_localctx, 14, RULE_comparisson_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 258048L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Logic_operatorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AND() { return GetToken(GramParser.AND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OR() { return GetToken(GramParser.OR, 0); }
		public Logic_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logic_operator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogic_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Logic_operatorContext logic_operator() {
		Logic_operatorContext _localctx = new Logic_operatorContext(Context, State);
		EnterRule(_localctx, 16, RULE_logic_operator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			_la = TokenStream.LA(1);
			if ( !(_la==AND || _la==OR) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Aritmetic_operator_strongContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MUL() { return GetToken(GramParser.MUL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIV() { return GetToken(GramParser.DIV, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MOD() { return GetToken(GramParser.MOD, 0); }
		public Aritmetic_operator_strongContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_aritmetic_operator_strong; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAritmetic_operator_strong(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Aritmetic_operator_strongContext aritmetic_operator_strong() {
		Aritmetic_operator_strongContext _localctx = new Aritmetic_operator_strongContext(Context, State);
		EnterRule(_localctx, 18, RULE_aritmetic_operator_strong);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1792L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Aritmetic_operator_weakContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADD() { return GetToken(GramParser.ADD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUB() { return GetToken(GramParser.SUB, 0); }
		public Aritmetic_operator_weakContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_aritmetic_operator_weak; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAritmetic_operator_weak(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Aritmetic_operator_weakContext aritmetic_operator_weak() {
		Aritmetic_operator_weakContext _localctx = new Aritmetic_operator_weakContext(Context, State);
		EnterRule(_localctx, 20, RULE_aritmetic_operator_weak);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			_la = TokenStream.LA(1);
			if ( !(_la==ADD || _la==SUB) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
